# ngram

./: .pre-commit-config.yaml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  docker-compose.yml  ngram_model.pth  pre-commit-config.yaml  pyproject.toml  requirements.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
other/front/: front.dockerfile  frontend_for_render.py  requirements.txt
scr/: __init__.py  cli.py
scr/back/: back.dockerfile  n_gram_api.py  requirements.txt
scr/front/: front.dockerfile  frontend.py  requirements.txt
tests/: __init__.py  test_n_gram_model_predict.py
